--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -5,3 +5,8 @@
  *= require_self
  *= require_tree . 
 */
+
+body {
+    font: 12px "Lucida Grande", "Trebuchet MS", Verdana, sans-serif;
+    color: #333;
+}
