--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,7 +1,7 @@
 !!!
 %html
   %head
-    %title Newsie
+    %title Rread
     = stylesheet_link_tag    "application"
     = javascript_include_tag "application"
     = csrf_meta_tags
@@ -12,7 +12,7 @@
   %body
   
   %header
-    %h1.tk-lobsters Newsie
+    %h1.tk-lobsters Rread
   
   #main
     
