--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,9 +5,9 @@
     = stylesheet_link_tag    "application"
     = javascript_include_tag "application"
     = csrf_meta_tags
-    %script{:src => "http://use.typekit.com/hrs5uav.js"}
-    %script
-      try{Typekit.load();}catch(e){}
+    / %script{:src => "http://use.typekit.com/hrs5uav.js"}
+    / %script
+    /   try{Typekit.load();}catch(e){}
     
   %body
   
