--- a/app/views/user/index.html.haml
+++ b/app/views/user/index.html.haml
@@ -1,19 +1,4 @@
-%br
-%br
-
-%h1 Reader
-%form
-  Feed URL:
-  %input{type: 'text', name: 'url'}
-  %a{id: 'add_link', href: '#'} Add
-  
-- for article in current_user.reader.article_feed
-  %hr
-  %h3= raw(article.title)
-  %p{style: "color:red"}= article.blog.name
-  = article.published_at
-  = link_to article.url, article.url
-  %p= raw(article.content)
+%hr
 
 %h1 Friendship Info
 
@@ -28,6 +13,33 @@
 %h2 People who've added me
 - for friend in current_user.inverse_friends
   %img{src: friend.avatar}
+
+%hr
+
+%h1 Friend Feed
+
+- for feed_item in @user_feed
+  = feed_item.user.name
+  - if feed_item.activity_type == Activity::SUBSCRIPTION_ADDED
+    subscribed to
+    = feed_item.target.blog.name + '.'
+  %br
+
+%hr
+
+%h1 Reader
+%form
+  Feed URL:
+  %input{type: 'text', name: 'url'}
+  %a{id: 'add_link', href: '#'} Add
+  
+- for article in current_user.reader.article_feed
+  %hr
+  %h3= raw(article.title)
+  %p{style: "color:red"}= article.blog.name
+  = article.published_at
+  = link_to article.url, article.url
+  %p= raw(article.content)
 
 / %h1 Import Greader
 / %form{}
