Basic routes setup for beandip.

--- a/app/views/user/index.html.haml
+++ b/app/views/user/index.html.haml
@@ -1,21 +1,1 @@
-#articles
-  - for article in current_user.reader.article_feed
-    .article.unread
-      %h3
-        %a.title{href: '#'}
-          = raw(article.blog.name)
-          \-
-          = raw(article.title)
-      .guts
-        = distance_of_time_in_words_to_now(article.published_at)
-        ago
-        = link_to article.url, article.url
-        = raw(article.content)
-
-/ %h1 Import Greader
-/ %form{}
-/   Email:
-/   %input{:type => 'text', :name => 'email'}
-/   Password:
-/   %input{:type => 'password', :name => 'password'}
-/   %a{:id => 'greader-link', :href => '#'} Go!
+USER LANDING PAGE
