some view changes.

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -1,7 +1,7 @@
 @import base/_mixins
 
 a
-  +transition(all .18s ease-in-out)
+  +transition(all .08s ease-in-out)
 
 $header_height: 30px
 
@@ -50,6 +50,7 @@ header
     position: absolute
     top: 50px
     right: 0
+    width: 200px
 a
   color: #0099CC
   
@@ -82,7 +83,6 @@ a
 
   &.active
     h3
-      font-size: 18px
       font-weight: bold
       a
         color: #333
