--- a/app/views/reader/index.html.haml
+++ b/app/views/reader/index.html.haml
@@ -1,13 +1,14 @@
 #articles
   - for article in @article_feed
+    - article
     .article.unread
       %h3
         %a.title{href: '#'}
-          = raw(article.blog.name)
+          = raw(article['blog_name'])
           \-
-          = raw(article.title)
+          = raw(article['title'])
       .guts
-        = distance_of_time_in_words_to_now(article.published_at)
+        = distance_of_time_in_words_to_now(article['published_at'])
         ago
-        = link_to article.url, article.url
-        = raw(article.content)
+        = link_to(article['url'], article['url'])
+        = raw(article['content'])
