--- a/app/views/reader/index.html.haml
+++ b/app/views/reader/index.html.haml
@@ -12,7 +12,7 @@
             %img{src: "https://fbcdn-profile-a.akamaihd.net/hprofile-ak-snc4/370638_777577509_271102326_q.jpg", class: "avatar"}
     
       %p.article-source
-        %img{src: "http://www.google.com/s2/u/0/favicons?domain=" + article['url'].gsub("http://", "")}
+        %img{src: "http://www.google.com/s2/u/0/favicons?domain=" + article['blog_url'].gsub("http://", "")}
         = article['blog_name']
       %h2.article-title= raw(article['title'])
       %h2.article-title.article-title-active
