added some front-end read stuff

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -97,6 +97,10 @@ a:hover .avatar
   .article-controls, .article-title-active, .article-contents
     display: none
 
+.article-read
+  .article-source, h2, .article-blurb
+    color: #aaa
+
 .article-active
   .article-blurb, .article-title
     display: none
