--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -67,6 +67,9 @@ a:hover .avatar
 
 /** ARTICLES **/
 
+#articles
+  box-shadow: 0px 0px 2px 2px #ccc
+
 .article
   border-bottom: 1px dotted
   padding: 20px
@@ -133,11 +136,11 @@ a:hover .avatar
       vertical-align: middle
 
 .article-contents
-  font-family: Georgia, Times, serif
-  font-size: 16px
+  //font-family: Georgia, Times, serif
+  font-size: 13px
   line-height: 1.6em
   img
-    -webkit-border-radius: 8px
+    -webkit-border-radius: 6px
     margin: 0 auto
     display: block
 
