--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -68,7 +68,7 @@ a:hover .avatar
 /** ARTICLES **/
 
 #articles
-  box-shadow: 0px 0px 2px 2px #ccc
+  +box_shadow(0px, 2px, 5px, rgba(0,0,0,.3))
 
 .article
   border-bottom: 1px dotted
@@ -136,9 +136,15 @@ a:hover .avatar
       vertical-align: middle
 
 .article-contents
-  //font-family: Georgia, Times, serif
-  font-size: 13px
+  font-family: Garamond, Georgia, Times, serif
+  font-size: 18px
   line-height: 1.6em
+  a
+    font-weight: bold
+    text-decoration: none
+    &:hover
+      text-decoration: none
+      color: darken(#900, 10%)
   img
     -webkit-border-radius: 6px
     margin: 0 auto
