--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -108,7 +108,7 @@ a:hover .avatar
   font-size: 11px
 
 .article-blurb
-  color: #333333
+  color: #999
   margin: 0
 
 /*** Selected Article **
@@ -117,9 +117,11 @@ a:hover .avatar
   .article-controls, .article-title-active, .article-contents, .article-close
     display: none
 
-.article-read
+.article-read.article-inactive
   .article-source, h2, .article-blurb
     color: #aaa
+    img
+      opacity: .2
 
 .article-active
   .article-blurb, .article-title
