--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -70,6 +70,16 @@ a:hover .avatar
 #articles
   +box_shadow(0px, 2px, 5px, rgba(0,0,0,.3))
 
+  .new-articles
+    padding: 20px
+    border-bottom: 1px dashed #ccc
+    color: #8BA8B2
+    font-weight: bold
+    text-align: center
+    cursor: pointer
+    &:hover
+      background: #F7F9FA
+
 .article
   border-bottom: 1px dashed #CCC
   padding: 20px
