--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -42,6 +42,10 @@ header
     width: 120px
     border: 1px
     float: left
+
+    ul
+      padding: 0
+      list-style-type: none
     
   #center
     margin: 0 200px
