closer to getting new article loading working

--- a/app/views/reader/index.html.haml
+++ b/app/views/reader/index.html.haml
@@ -31,4 +31,4 @@
 
 
 %script{id: "article-template", type: "text/x-handlebars-template"}
-  = raw(File.read(Rails.root.to_s+"/app/views/reader/article.html.hbs"))
+  = raw(File.read(Rails.root.to_s+"/app/views/reader/article.hamlbars"))
