--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -81,6 +81,7 @@ a:hover .avatar
     font-weight: bold
     text-align: center
     cursor: pointer
+    display: none
     &:hover
       background: #F7F9FA
 
