dynamic insertion working

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -192,7 +192,8 @@ a:hover .avatar
   font-size: 15px
   line-height: 1.6em
   color: #444
-  > a
+  
+  a
     font-weight: bold
     text-decoration: none
     color: #222
@@ -203,15 +204,15 @@ a:hover .avatar
     img
       border: none!important
       text-decoration: none
-  img
 
-  .alignleft
-    float: right
-    margin: 0 10px 10px 0
-    
-  .alignright
-    float: right
-    margin: 0 0 10px 10px
+  img
+    .alignleft
+      float: right
+      margin: 0 10px 10px 0
+      
+    .alignright
+      float: right
+      margin: 0 0 10px 10px
 
 @font-face
   font-family: 'ProximaNovaRegular'
