j/k shortcuts. some other stuff.

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -73,6 +73,10 @@ a:hover .avatar
 
 #articles
   +box_shadow(0px, 2px, 5px, rgba(0,0,0,.3))
+  min-height: 100px
+  
+  &.loading
+    background: image-url('ajax-loader.gif') no-repeat 50% 50%
 
   .new-articles
     padding: 20px
