--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -1,4 +1,7 @@
 @import base/_mixins
+@import base/bootstrap
+
+$bright_blue: #09C
 
 a
   +transition(all .08s ease-in-out)
@@ -11,16 +14,14 @@ body
   font-size: 13px
   color: #222
   background: #EFEFEF
+
 header
-  /* position: fixed */
   top: 0
   left: 0
   width: 100%
   height: $header_height
   overflow: hidden
-  z-index: 999
-  background: rgba(240,240,240,.9)
-  border: 1px solid #ccc
+  padding: 10px
   
   .right
     position: absolute
@@ -36,7 +37,8 @@ header
     +text_shadow(0, 1px, 2px, #fff)
   
 #main
-  margin-top: $header_height+50
+  margin-top: $header_height
+  position: relative
   
   #left
     width: 120px
@@ -50,12 +52,13 @@ header
   #center
     margin: 0 200px
     max-width: 800px
-    background: #fff
     
   #right
     position: absolute
-    top: 50px
-    right: 0
+    top: 10px
+    right: 10px
+    padding: 20px
+    font-size: 11px
     width: 200px
 a
   color: #0099CC
@@ -69,11 +72,62 @@ a
 a:hover .avatar
   opacity: .8
 
+
+#main-header, #articles, #right
+  +box_shadow(0px, 2px, 5px, rgba(0,0,0,.3))
+  background: #fff
+
+#main-header
+  a
+    position: relative
+    color: #000
+    font-size: 11px
+    text-decoration: none
+    padding: 10px
+    display: block
+
+    &:hover
+      color: $bright_blue
+      background: lighten($bright_blue, 50%)
+
+    &.selected
+      font-weight: bold
+  
+
+  .mark_all
+    float: right
+
+
+  ul
+    list-style: none
+    margin: 0
+    padding: 0
+  
+    li
+      float: left
+      margin: 0
+      padding: 0
+
+      a
+        div
+          display: none
+          position: absolute
+          background: #fff
+          padding: 20px
+          z-index: 1
+        
+        &:hover
+          div
+            display: block
+          
+
 /** ARTICLES **/
+
+
 
 #articles
   +box_shadow(0px, 2px, 5px, rgba(0,0,0,.3))
-  min-height: 100px
+  clear: both
   
   &.loading
     background: image-url('ajax-loader.gif') no-repeat 50% 50%
