initial fixed header work

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -93,6 +93,12 @@ a:hover .avatar
     &.selected
       font-weight: bold
   
+  &.subnav-fixed
+    position: fixed
+    top: 0
+    width: 800px
+    margin: 0 auto
+    z-index: 9999 
 
   .mark_all
     float: right
