--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -15,54 +15,30 @@ body
   color: #222
   background: #EFEFEF
 
-header
-  top: 0
-  left: 0
-  width: 100%
-  height: $header_height
-  overflow: hidden
-  padding: 10px
-  
-  .right
-    position: absolute
-    top: 0
-    right: 0
-  
+#header
   h1
-    text-align: center
     margin: 0
     font-size: 14px
     line-height: $header_height
     color: rgba(130,130,130,1)
     +text_shadow(0, 1px, 2px, #fff)
+
+  .right
+    text-align: right
+    
+    img
+      vertical-align: middle
+
   
 #main
   margin-top: $header_height
   position: relative
-  
-  #left
-    width: 120px
-    border: 1px
-    float: left
 
-    ul
-      padding: 0
-      list-style-type: none
-    
-  #center
-    margin: 0 200px
-    max-width: 800px
-    
-  #right
-    position: absolute
-    top: 10px
-    right: 10px
-    padding: 20px
+#right
+  p
+    padding: 10px
+    border-bottom: 1px dashed #CCC
     font-size: 11px
-    width: 200px
-a
-  color: #0099CC
-
 
 .avatar
   width: 27px
@@ -94,9 +70,9 @@ a:hover .avatar
       font-weight: bold
   
   &.subnav-fixed
+    width: 620px
     position: fixed
     top: 0
-    width: 800px
     margin: 0 auto
     z-index: 9999 
 
@@ -128,9 +104,6 @@ a:hover .avatar
           
 
 /** ARTICLES **/
-
-
-
 #articles
   +box_shadow(0px, 2px, 5px, rgba(0,0,0,.3))
   clear: both
@@ -284,3 +257,26 @@ a:hover .avatar
   src: url('proxima_nova-regular-webfont.eot?#iefix') format("embedded-opentype"), url('proxima_nova-regular-webfont.woff') format("woff"), url('proxima_nova-regular-webfont.ttf') format("truetype"), url('proxima_nova-regular-webfont.svg#ProximaNovaRegular') format("svg")
   font-weight: normal
   font-style: normal
+
+
+// Landscape phones and down
+@media (max-width: 767px)
+  #main-header.subnav-fixed
+    width: auto
+    right: 0
+    left: 0
+
+// Landscape phone to portrait tablet
+@media (max-width: 768px)
+  #main-header.subnav-fixed
+    width: 476px
+
+// Portrait tablet to landscape and desktop
+@media (min-width: 768px) and (max-width: 980px)
+  #main-header.subnav-fixed
+    width: 476px
+
+// Large desktop
+@media (min-width: 1200px)
+  #main-header.subnav-fixed
+    width: 770px
